--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "jest": {
+    "collectCoverageFrom": ["src/**/*.js", "!src/index.js"]
+  },
   "devDependencies": {
     "enzyme-adapter-react-16": "^1.1.1"
   }
